--- a/client/src/Hero.module.css
+++ b/client/src/Hero.module.css
@@ -1,10 +1,22 @@
 
+.hero-h1, .hero-h4 {
+  background-color: yellow;
+  height: fit-content;  
+  display: inline-block;
+  width: fit-content;
+  margin: 20px 0 0 20px;
+  padding: 15px;
+}
 
 .col-1 {
   flex-grow: 2;
   background: url('https://jolly-kalam-23776e.netlify.app/restaurantwebsite/images/taco.jpg');
   height: 400px;
   background-position: bottom;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+
 }
 
 .col-2 {
@@ -18,7 +30,7 @@
 .item-1, .item-2 {
   height: 45%;
   border: 1px green solid;
-  background-color: yellow;
+  background-color: yellow; 
 }
 
 .hero-container {
