--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,6 +2,11 @@
   box-sizing: border-box;
 }
 
+h1 {
+    margin-block-start: 0em;
+    margin-block-end: 0em;
+}
+
 h4 {
   margin-block-start: 0.33em;
   margin-block-end: 0.33em;
