--- a/client/src/Hero.module.css
+++ b/client/src/Hero.module.css
@@ -8,6 +8,17 @@
   padding: 15px;
 }
 
+.item-1, .item-2 {
+  height: 45%;
+  border: 1px green solid;
+  background-color: yellow; 
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 23px;
+}
+
 .col-1 {
   flex-grow: 2;
   background: url('https://jolly-kalam-23776e.netlify.app/restaurantwebsite/images/taco.jpg');
@@ -27,11 +38,6 @@
   justify-content: space-evenly;
 }
 
-.item-1, .item-2 {
-  height: 45%;
-  border: 1px green solid;
-  background-color: yellow; 
-}
 
 .hero-container {
   display: flex;
